# my_display

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  gxhtc3.c  main.c  qmc5883l.c  qmi8658c.c
main/app/: app_main.c  lvgl_demo_ui.c  th_task.c
main/bsp/: bsp_iic.c  bsp_iic.h
main/sensor/: audio.c  gxhtc3.c  gxhtc3.h  qmc5883l.c  qmc5883l.h  qmi8658c.c  qmi8658c.h  sensor.h
